# titan-deriverse

./: Cargo.toml  README.md
jupiter-amm-interface/: Cargo.toml
jupiter-amm-interface/src/: swap.rs
keys/: jupiter-client-a.json  jupiter-client-b.json
src/: helper.rs  lib.rs  tests.rs
src/custom_sdk/: deposit.rs  mod.rs  new_spot_order.rs
titan-deriverse/: README.md
titan-deriverse/src/: amm.rs  instrument.rs  lib.rs  lines_linked_list.rs  tests.rs
titan-deriverse/src/custom_sdk/: traits.rs
